tests/baselines/reference/parserObjectType6.errors.txt
tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType6.ts(2,7): error TS2304: Cannot find name 'B'.
tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType6.ts(3,4): error TS1096: An index signature must have exactly one parameter.


==== tests/cases/conformance/parser/ecmascript5/ObjectTypes/parserObjectType6.ts (2 errors) ====
    var v: {
       a: B
          ~
!!! error TS2304: Cannot find name 'B'.
       [];
       ~~~
!!! error TS1096: An index signature must have exactly one parameter.
    };